[project]
name = "pymcpgateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "kubernetes>=34.1.0",
    "pyjwt>=2.10.1",
    "redis>=7.1.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
